src-tauri/tests/snapshots/cross_validation__xv_asst_empty_content_fallback.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: fallback text
  status:
    type: complete
    reason: stop
  streaming: ~
