src-tauri/tests/snapshots/cross_validation__xv_asst_merge_tool_result_with_image_block.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: tool-call
      tool_name: Bash
      tool_call_id: t1
      args_keys:
        - command
      args_text_length: 16
      has_result: true
      result_kind: string
      result_preview: file-a
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
