src-tauri/tests/snapshots/cross_validation__xv_asst_server_tool_use.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: tool-call
      tool_name: WebSearch
      tool_call_id: st1
      args_keys:
        - query
      args_text_length: 15
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
