src-tauri/tests/snapshots/cross_validation__xv_edge_100_alternating.snap
---
source: tests/cross_validation.rs
expression: summary
---
total: 100
roles:
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
first_id: u0
last_id: a99
