src-tauri/tests/snapshots/cross_validation__xv_edge_no_type_no_role_match.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: x1
  content_length: 1
  content:
    - type: text
      text: Event
  status: ~
  streaming: ~
