src-tauri/tests/snapshots/cross_validation__xv_edge_non_json_assistant_fallback.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: plain-text streaming
  status:
    type: complete
    reason: stop
  streaming: ~
