src-tauri/tests/snapshots/cross_validation__xv_edge_non_json_content_with_malformed_json.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: "{not really json"
  status:
    type: complete
    reason: stop
  streaming: ~
