src-tauri/tests/snapshots/cross_validation__xv_edge_single_assistant_text.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: hi
  status:
    type: complete
    reason: stop
  streaming: ~
