src-tauri/tests/snapshots/cross_validation__xv_edge_streaming_flag.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: streaming...
  status:
    type: complete
    reason: stop
  streaming: true
