src-tauri/tests/snapshots/cross_validation__xv_edge_unknown_type.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: x1
  content_length: 1
  content:
    - type: text
      text: mystery_event event
  status: ~
  streaming: ~
